Creation des routes pour mettre etat de changement de materiel
